--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header & Navigation -->
     <header>
         <nav>
-            <div class="logo">Your Name</div>
+            <div class="logo">Haffas Zikri Ariyandi</div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -25,9 +25,10 @@
         <!-- Hero Section -->
         <section id="hero">
             <div class="hero-content">
-                <h1>Hi, I'm [Your Name]</h1>
-                <p class="subtitle">I design and build beautiful websites and applications.</p>
+                <h1>Hi, I'm Haffas Zikri Ariyandi</h1>
+                <p class="subtitle">I design and build beautiful websites and interactive game.</p>
                 <a href="#projects" class="cta-button">View My Work</a>
+                <a href="https://drive.google.com/file/d/1Nvl8wBZi_qRyOnAztgnRLrfDsE_um-oP/view?usp=sharing" class="cta-button">View My CV</a>
             </div>
         </section>
 
@@ -37,9 +38,9 @@
             <div class="about-container">
                 <img src="https://via.placeholder.com/150" alt="A photo of you" class="profile-pic">
                 <p>
-                    Hello! I'm a passionate and creative developer based in [Your City]. My journey into tech started with a fascination for how things work, which eventually led me to the world of web development. I specialize in [mention your specialty, e.g., front-end development, Python programming, UI/UX design].
+                    Hello! I'm a passionate and creative developer based in Medan. My journey into tech started with a fascination for how things work, which eventually led me to the world of web development. I specialize in  UI/UX design, and Game Programmer.
                     <br><br>
-                    When I'm not coding, you can find me [mention a hobby or two, e.g., hiking, reading sci-fi novels, or experimenting with new recipes]. I'm always eager to learn new technologies and collaborate on exciting projects.
+                    When I'm not coding, you can find me experimenting with new recipes. I'm always eager to learn new technologies and collaborate on exciting projects.
                 </p>
             </div>
         </section>
