--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <h1>Hi, I'm Haffas Zikri Ariyandi</h1>
                 <p class="subtitle">I design and build beautiful websites and interactive game.</p>
                 <a href="#projects" class="cta-button">View My Work</a>
+                <p class="subtitle">And</p>
                 <a href="https://drive.google.com/file/d/1Nvl8wBZi_qRyOnAztgnRLrfDsE_um-oP/view?usp=sharing" class="cta-button">View My CV</a>
             </div>
         </section>
@@ -38,7 +39,7 @@
             <div class="about-container">
                 <img src="https://via.placeholder.com/150" alt="A photo of you" class="profile-pic">
                 <p>
-                    Hello! I'm a passionate and creative developer based in Medan. My journey into tech started with a fascination for how things work, which eventually led me to the world of web development. I specialize in  UI/UX design, and Game Programmer.
+                    Hello! I'm a passionate and creative developer based in Medan. My journey into tech started with a fascination for how things work, which eventually led me to the world of web development. I specialize in UI/UX design, Pixel Art and Game Programmer.
                     <br><br>
                     When I'm not coding, you can find me experimenting with new recipes. I'm always eager to learn new technologies and collaborate on exciting projects.
                 </p>
@@ -52,36 +53,64 @@
 
                 <!-- Project Card 1 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Screenshot of Project 1">
-                    <h3>Project Title 1</h3>
-                    <p>A short description of your project. Explain the challenge and your solution.</p>
+                    <img src="https://img.itch.zone/aW1nLzIwOTY1NzcyLnBuZw==/315x250%23c/hchJul.png" alt="Screenshot of Project 1">
+                    <h3>Bubblewrap (Game)</h3>
+                    <p>Pop the bubblewraps with the least number of moves. Plan ahead; careful uses of power-ups will help you sweep the grid and get to the next level!.</p>
                     <div class="project-tech">
                         <span>React</span>
                         <span>Node.js</span>
                         <span>CSS</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank">Live Demo</a>
-                        <a href="#" target="_blank">Source Code</a>
+                        <a href="#https://haffas-zikri-a.itch.io/bubblewrap" target="_blank">Explore</a>
                     </div>
                 </div>
 
                 <!-- Project Card 2 -->
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Screenshot of Project 2">
-                    <h3>Project Title 2</h3>
-                    <p>A short description of your project. Explain the challenge and your solution.</p>
+                    <img src="https://img.itch.zone/aW1nLzE4ODYxNjAzLnBuZw==/315x250%23c/uRCQrO.png" alt="Screenshot of Project 2">
+                    <h3>Nightwatch At The Gallery (Game)</h3>
+                    <p>Uncover the Gallery's Past Secret</p>
                     <div class="project-tech">
                         <span>Python</span>
                         <span>Flask</span>
                         <span>HTML</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank">Live Demo</a>
-                        <a href="#" target="_blank">Source Code</a>
+                        <a href="https://alizul01.itch.io/nightwatch-at-the-gallery" target="_blank">Explore</a>
                     </div>
                 </div>
 
+                  <!-- Project Card 3 -->
+                <div class="project-card">
+                    <img src="https://img.itch.zone/aW1nLzE5NzQzMzc0LnBuZw==/315x250%23c/hy%2FpXZ.png" alt="Screenshot of Project 2">
+                    <h3>Gerbong 9 (Game)</h3>
+                    <p>Find the anomalies and carefully!</p>
+                    <div class="project-tech">
+                        <span>Python</span>
+                        <span>Flask</span>
+                        <span>HTML</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://hdytalhayat.itch.io/gerbong-9" target="_blank">Explore</a>
+                    </div>
+                </div>
+
+                  <!-- Project Card 4 -->
+                <div class="project-card">
+                    <img src="https://img.itch.zone/aW1nLzE0OTkyODMzLnBuZw==/315x250%23c/hAIDH7.png" alt="Screenshot of Project 2">
+                    <h3>Data Quest: Big Data Adventure (Game)</h3>
+                    <p>Explore and learn big data from the adventure.</p>
+                    <div class="project-tech">
+                        <span>Python</span>
+                        <span>Flask</span>
+                        <span>HTML</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://haffas-zikri-a.itch.io/big-data-quest-big-data-adventure" target="_blank">Explore</a>
+                    </div>
+                </div>
+                
                 <!-- Add more project cards as needed -->
 
             </div>
@@ -91,17 +120,15 @@
         <section id="contact">
             <h2>Get In Touch</h2>
             <p>I'm currently open to new opportunities. Feel free to send me a message!</p>
-            <a href="mailto:your.email@example.com" class="cta-button">Say Hello</a>
+            <a href="mailto:your.haffasza@gmail.com" class="cta-button">Say Hello</a>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 [Your Name]. All Rights Reserved.</p>
+        <p>© 2025 Haffas Z A. All Rights Reserved.</p>
         <div class="social-links">
-            <a href="#">LinkedIn</a>
-            <a href="#">GitHub</a>
-            <a href="#">Twitter</a>
+            <a href="https://www.linkedin.com/in/haffas-zikri-ariyandi?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">LinkedIn</a>
         </div>
     </footer>
 
