--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <section id="about">
             <h2>About Me</h2>
             <div class="about-container">
-                <img src="https://via.placeholder.com/150" alt="A photo of you" class="profile-pic">
+                <img src="https://drive.google.com/file/d/1lCnzZ3Z3WonG9EJ-vAJC0j122Lbhn8hz/view?usp=drivesdk" alt="A photo of you" class="profile-pic">
                 <p>
                     Hello! I'm a passionate and creative developer based in Medan. My journey into tech started with a fascination for how things work, which eventually led me to the world of web development. I specialize in UI/UX design, Pixel Art and Game Programmer.
                     <br><br>
-                    When I'm not coding, you can find me experimenting with new recipes. I'm always eager to learn new technologies and collaborate on exciting projects.
+                    When I'm not coding, you can find me playing video games and design. I'm always eager to learn new technologies and collaborate on exciting projects.
                 </p>
             </div>
         </section>
@@ -57,9 +57,8 @@
                     <h3>Bubblewrap (Game)</h3>
                     <p>Pop the bubblewraps with the least number of moves. Plan ahead; careful uses of power-ups will help you sweep the grid and get to the next level!.</p>
                     <div class="project-tech">
-                        <span>React</span>
-                        <span>Node.js</span>
-                        <span>CSS</span>
+                       <span>Unity</span>
+                        <span>C#</span>
                     </div>
                     <div class="project-links">
                         <a href="#https://haffas-zikri-a.itch.io/bubblewrap" target="_blank">Explore</a>
@@ -72,9 +71,8 @@
                     <h3>Nightwatch At The Gallery (Game)</h3>
                     <p>Uncover the Gallery's Past Secret</p>
                     <div class="project-tech">
-                        <span>Python</span>
-                        <span>Flask</span>
-                        <span>HTML</span>
+                         <span>Unity</span>
+                        <span>C#</span>
                     </div>
                     <div class="project-links">
                         <a href="https://alizul01.itch.io/nightwatch-at-the-gallery" target="_blank">Explore</a>
@@ -87,9 +85,8 @@
                     <h3>Gerbong 9 (Game)</h3>
                     <p>Find the anomalies and carefully!</p>
                     <div class="project-tech">
-                        <span>Python</span>
-                        <span>Flask</span>
-                        <span>HTML</span>
+                         <span>Unity</span>
+                        <span>C#</span>
                     </div>
                     <div class="project-links">
                         <a href="https://hdytalhayat.itch.io/gerbong-9" target="_blank">Explore</a>
@@ -102,9 +99,8 @@
                     <h3>Data Quest: Big Data Adventure (Game)</h3>
                     <p>Explore and learn big data from the adventure.</p>
                     <div class="project-tech">
-                        <span>Python</span>
-                        <span>Flask</span>
-                        <span>HTML</span>
+                        <span>Unity</span>
+                        <span>C#</span>
                     </div>
                     <div class="project-links">
                         <a href="https://haffas-zikri-a.itch.io/big-data-quest-big-data-adventure" target="_blank">Explore</a>
@@ -120,7 +116,7 @@
         <section id="contact">
             <h2>Get In Touch</h2>
             <p>I'm currently open to new opportunities. Feel free to send me a message!</p>
-            <a href="mailto:your.haffasza@gmail.com" class="cta-button">Say Hello</a>
+            <a href="haffasza123@gmail.com" class="cta-button">Say Hello</a>
         </section>
     </main>
 
